--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.10.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
